test/files/neg/t9401.scala
class Resetting[T] {
  var gencastarray: Any = null
  gencastarray = new Array[T](0)
}
