test/files/neg/t9401.check
t9401.scala:3: error: cannot find class tag for element type T
  gencastarray = new Array[T](0)
                 ^
one error found
